# giza-omen-agent

./: .env.example  .gitignore  README.md  pyproject.toml
giza-omen-agent/: addresses.py  agent.py  agents.py
giza-omen-agent/agents/: coinflip_agent.py  giza_coinflip_agent.py
model/: agent_actions_notebook.ipynb  dummy_data.npy  dummy_model.onnx
omen_model/inference/: Scarb.toml
omen_model/inference/src/: lib.cairo
omen_model/initializers/node_fc1_bias/src/: chunk0.cairo  lib.cairo
omen_model/initializers/node_fc1_weight/src/: chunk0.cairo  lib.cairo
omen_model/initializers/node_fc2_bias/src/: chunk0.cairo  lib.cairo
omen_model/initializers/node_fc2_weight/src/: chunk0.cairo  lib.cairo
omen_model/initializers/node_fc3_bias/src/: chunk0.cairo  lib.cairo
omen_model/initializers/node_fc3_weight/src/: chunk0.cairo  lib.cairo
poetry_demo/: demo_omen.py
scripts/: run_agent.py
