[tool.poetry]
name = "giza-omen-agent"
version = "0.1.0"
description = ""
authors = ["Gabriel Fior <fior.gbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
giza-actions = {version= "^0.3.1"}
giza-cli = "^0.15.1"
eth-ape = "^0.7.23"
prediction-market-agent-tooling = {git = "https://github.com/gnosis/prediction-market-agent-tooling.git", branch = "gabriel/giza-deps"}
#prediction-market-agent-tooling = { version = "^0.30.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

