[tool.poetry]
name = "giza-omen-agent"
version = "0.1.0"
description = ""
authors = ["Gabriel Fior <fior.gbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
eth-ape = "^0.7.23"
prediction-market-agent-tooling = {git = "https://github.com/gnosis/prediction-market-agent-tooling.git", branch = "gabriel/giza-deps"}
#prediction-market-agent-tooling = { version = "^0.30.0" }
giza-sdk = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

